# dataagent

./: .gitlab-ci.yml  Makefile  PROJECT_INTRO.md  PROJECT_INTRO_EN.md  README.md  config.py  mcp.json  pyproject.toml
source/dataagent-cli/: README.md  pyproject.toml
source/dataagent-cli/dataagent_cli/: __init__.py  colors.py  commands.py  hitl.py  input.py  main.py  renderer.py  ui.py
source/dataagent-core/: README.md  pyproject.toml
source/dataagent-core/.hypothesis/constants/: 08a0e958cce87643  0de29496c0134c5f  1e73013d2f774a45  21b3f23009265462  2f3a630c83d3a1ce  652c4d3ab4ea0d46  667a58fd0a733ce4  66c17ed0a85a99cf  67ac75796b91df70  6bc1f387ef930100  6e2cf326504c4cf4  7ceda932d0e03073  7d2bf2614635984e  8ec3b94aab4922c3  8f2184ce1dfe6666  8ffade8f88fb0627  9155753a880cbd10  9d3a4fc65bda4b01  afc79b8116296de6  b40cd7ed30fe8d96  b4509fa8df6fbce1  bf61ed8579b678de  cd5e14a9b54c6a58  d025ff283d7e4228  d1958961442c0247  e4d17ab2f5c6f189  ea65200982f46ec4  f4eae64beecba58f
source/dataagent-core/dataagent_core/: __init__.py
source/dataagent-core/dataagent_core/config/: __init__.py  default_agent_prompt.md  settings.py
source/dataagent-core/dataagent_core/database/: __init__.py  factory.py  migration.py  models.py
source/dataagent-core/dataagent_core/engine/: __init__.py  executor.py  factory.py
source/dataagent-core/dataagent_core/events/: __init__.py  rules.py
source/dataagent-core/dataagent_core/hitl/: __init__.py  protocol.py
source/dataagent-core/dataagent_core/mcp/: __init__.py  config.py  loader.py  manager.py  sqlite_store.py  store.py
source/dataagent-core/dataagent_core/middleware/: __init__.py  memory.py  rules.py  shell.py  skills.py
source/dataagent-core/dataagent_core/rules/: __init__.py  conflict.py  matcher.py  merger.py  models.py  parser.py  store.py
source/dataagent-core/dataagent_core/session/: __init__.py  factory.py  manager.py  message_store.py  models.py  state.py  store.py
source/dataagent-core/dataagent_core/tools/: __init__.py  file_tracker.py  human.py  web.py
source/dataagent-core/dataagent_core/user/: __init__.py  context.py  profile.py  sqlite_store.py  store.py
source/dataagent-core/dataagent_core/workspace/: __init__.py  backend.py  manager.py
source/dataagent-core/tests/: __init__.py  conftest.py
source/dataagent-core/tests/test_architecture/: __init__.py  test_dependencies.py
source/dataagent-core/tests/test_config/: test_settings.py
source/dataagent-core/tests/test_engine/: test_executor.py  test_factory.py
source/dataagent-core/tests/test_events/: test_properties.py  test_serialization.py
source/dataagent-core/tests/test_hitl/: __init__.py  test_protocol.py
source/dataagent-core/tests/test_mcp/: test_cli_integration.py  test_config.py  test_config_extended.py  test_loader_commands.py  test_manager.py  test_manager_extended.py  test_mcp_properties.py  test_multi_tenant_isolation.py  test_sqlite_store.py  test_store.py
source/dataagent-core/tests/test_middleware/: test_memory_isolation.py
source/dataagent-core/tests/test_rules/: __init__.py  test_conflict.py  test_matcher.py  test_merger.py  test_middleware.py  test_models.py  test_parser.py  test_store.py
source/dataagent-core/tests/test_session/: test_isolation.py  test_manager.py  test_message_store.py  test_mysql_store.py  test_properties.py  test_state.py  test_store.py
source/dataagent-core/tests/test_user/: __init__.py  test_context.py  test_profile.py  test_sqlite_store.py  test_store.py
source/dataagent-core/tests/test_workspace/: test_backend.py  test_manager.py
source/dataagent-harbor/: README.md  pyproject.toml
source/dataagent-harbor/dataagent_harbor/: __init__.py  cli.py  client.py  models.py  runner.py  tracing.py
source/dataagent-harbor/datasets/: sample-qa.json
source/dataagent-harbor/tests/: __init__.py  conftest.py  test_models.py
source/dataagent-server/: README.md  pyproject.toml
source/dataagent-server-demo/: README.md  pyproject.toml
source/dataagent-server-demo/dataagent_server_demo/: __init__.py  app.py
source/dataagent-server-demo/dataagent_server_demo/pages/: 1_🔐_Login.py  2_📊_Dashboard.py  3_🔌_MCP.py  4_📁_Workspaces.py  5_💬_Sessions.py
source/dataagent-server-demo/dataagent_server_demo/utils/: __init__.py  api_client.py  auth.py
source/dataagent-server/.hypothesis/constants/: 02587a9976acec68  09e63f350c42b6cc  0dfa7933cfe29e41  1359094c90bf4244  2bb867a7234868f6  3067888cc43bfebc  389baab40f473efd  3e781ba86e5970a8  49e83b8fdf0665be  4c6a86f43dc0e8e5  4d4d0cf4c643a41c  64c4ec94750c7808  652c4d3ab4ea0d46  667a58fd0a733ce4  66c17ed0a85a99cf  6bc1f387ef930100  6e3044deeeea1a61  6f4ef6159fd7f2c8  70d802075e5a7eec  722b394420fb9144  7b66f3be0791cbd7  7e75236847fe6a35  8005cf814cc3731a  810d6356de088a68  8268d28f06140eb3  8b0e18d197e799bd  8c0025843333a595  acd7cae7f7ba6c61  afc79b8116296de6  b32075476aaaa094  b4bc2b6f87b1b93e  b55f8b085a8376c9  b7a1f62838fc03d2  bd0f9ed1ea7238fe  bdce9f30f35af13c  ca4ea8d987f749ea  d025ff283d7e4228  d6a873246aa7a10d  d73314bae23df5e6  e26ade35f1d85a87  (+4 more)
source/dataagent-server/dataagent_server/: __init__.py  main.py
source/dataagent-server/dataagent_server/api/: deps.py
source/dataagent-server/dataagent_server/auth/: __init__.py  api_key.py  jwt.py  middleware.py  password.py
source/dataagent-server/dataagent_server/config/: __init__.py  settings.py
source/dataagent-server/dataagent_server/database/: __init__.py  factory.py  migration.py  models.py
source/dataagent-server/dataagent_server/hitl/: __init__.py  sse_handler.py  websocket_handler.py
source/dataagent-server/tests/: __init__.py  conftest.py
(+221 files in other folders)
