[project]
name = "dataagent-cli"
version = "0.3.1"
description = "Command-line interface for DataAgent platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataagent-core",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
dataagent = "dataagent_cli.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataagent_cli"]

[tool.uv.sources]
dataagent-core = { path = "../dataagent-core" }
