[project]
name = "dataagent-server-demo"
version = "0.2.0"
description = "Streamlit demo for DataAgent Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "websocket-client>=1.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
dataagent-demo = "dataagent_server_demo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
