[project]
name = "dataagent-server"
version = "0.3.1"
description = "DataAgent Web Server - FastAPI-based REST API and WebSocket service"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DataAgent Team"}
]
keywords = ["agent", "llm", "fastapi", "websocket", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dataagent-core",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "langchain-mcp-adapters>=0.0.1",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "langgraph-checkpoint-postgres>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
dataagent-server = "dataagent_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataagent_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
dataagent-core = { path = "../dataagent-core" }
